Give selected nodes a z-index to prevent artificats when nodes slide up.
Fixes #192

--- a/tree.scss
+++ b/tree.scss
@@ -211,6 +211,7 @@ $transition: 300ms ease-out;
 
         &.selected {
           background-color: #2d3135;
+          z-index: 1;
 
           &:before {
             content: "";
